--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DotGothic16&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,9 +8,8 @@
 }
 
 :root {
-    --text-color: rgb(57, 5, 5);
-    --background-color: #f82764;
-    --dark-background-color: #222222;
+    scroll-behavior: smooth;
+    font-family: 'DotGothic16', sans-serif;
 }
 
 h1 {
