--- a/css/common.css
+++ b/css/common.css
@@ -4,10 +4,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: rgb(34, 96, 210);
 }
 
 :root {
+    --text-color: black;
+    --bg-color: #7acbd1;
     scroll-behavior: smooth;
     font-family: 'DotGothic16', sans-serif;
 }
@@ -16,25 +17,8 @@ h1 {
     color: #f82764;
 }
 
-h3 {
-    color: rgb(41, 165, 243);
-    width: 50%;
-
-}
-
-h3:hover {
-    text-decoration: underline;
-}
-
-h3::first-letter {
-    color: var(--light-background-color);
-}
-
-.product-card .product-card__description {
-    color: var(--dark-background-color);
-}
-
-p {
-    color: var(--light-background-color);
+img {
+    display: block;
+    width: 100%;
 }
 
