--- a/css/index-header.css
+++ b/css/index-header.css
@@ -27,4 +27,11 @@
     .header-nav > .container {
         display: flex;
     }
+
+    .header-nav__menu {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        flex: 1;
+    }
 }
