--- a/css/index-header.css
+++ b/css/index-header.css
@@ -2,7 +2,7 @@
     background-color: var(--bg-color);
     padding: 5px;
 }
-
+.header-banner__h1,
 .header-nav__logo {
     font-size: 3.5rem;
     text-align: center;
@@ -34,4 +34,15 @@
         justify-content: space-around;
         flex: 1;
     }
+}
+
+.header-banner {
+    background-image: url(../img/baby-yoda.svg);
+    background-size: cover;
+    background-position: 50% 50%;
+    min-height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
