--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url(common.css);
+@import url(controls.css);
 @import url(index-header.css);
 @import url(index-products.css);
 @import url(index-footer.css);
